--- a/index.html
+++ b/index.html
@@ -10,11 +10,71 @@
     <!-- HEADER -->
 
     <header>
-      <section class="header-top">
-      </section>
-      <section class="header-bot">
-      </section>
-    </header>
+      <section class="header-top row">
+        <div class="container">
+          <div class="float-left">
+            <i class="fas fa-globe-europe"></i>
+            <select class="lingua" name="Lingua">
+              <option value="eng">English</option>
+              <option value="ita">Italiano</option>
+              <option value="ger">Deutsche</option>
+            </select>
+            <a id="contact" href="#">Contact us</a>
+          </div>
+          <div class="float-right">
+            <div class="searchbar">
+              <input type="text" class="searchtext" placeholder="Search..">
+              <button class="searchlens" type="button" name="button">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
+            <button id="login" type="button" name="login">Log in</button>
+            <button id="gethub" type="button" name="gethubspotfree">GetHubSpotFree</button>
+          </section>
+
+      <section class="header-bot row">
+        <div class="container">
+          <img id="logo" src="img/logo.svg" alt="logo">
+          <nav class="main-nav">
+            <ul>
+              <li>
+                <select class="select-nav" name="">
+                  <option value="">Software</option>
+                  <option value="">Pollo</option>
+                </select>
+              </li>
+              <li>
+                <a id="pricing" href="#">Pricing</a>
+              </li>
+              <li>
+                <select class="select-nav" name="">
+                  <option value="">Resources</option>
+                  <option value="">Mucca</option>
+                </select>
+              </li>
+              <li>
+                <select class="select-nav" name="">
+                  <option value="">Partners</option>
+                  <option value="">Gallina</option>
+                </select>
+              </li>
+              <li>
+                  <select class="select-nav" name="">
+                    <option value="">About</option>
+                    <option value="">Cavallo</option>
+                  </select>
+              </li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+      </header>
+
+
+
+
+
+
     <!-- MAIN -->
     <main>
       <div class="color-section">
