--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <option value="ita">Italiano</option>
               <option value="ger">Deutsche</option>
             </select>
-            <a id="contact" href="#">Contact us</a>
+            <a id="contact" href="#">Contact Us</a>
           </div>
           <div class="float-right">
             <div class="searchbar">
@@ -70,100 +70,108 @@
         </section>
       </header>
 
-
-
-
-
-
-    <!-- MAIN -->
-    <main>
-      <div class="color-section">
+      <!-- MAIN -->
+      <main>
         <section class="jumbo">
-        </section>
-        <section class="rubik-box">
-        </section>
-        <section class="row-uno">
+          <div class="banner-bot">
+          </div>
           <div class="container">
-            <aside class="leftbox">
-            </aside>
-            <aside class="rightbox">
-            </aside>
+            <div class="text-jumbo">
+              <h1>There's a better way to grow.</h1>
+              <p>Marketing, sales, and service software that helps your business grow without compromise. Because &quot;good for the business&quot; should also mean &quot;good for the customer.&quot;</p>
+              <button id="jumbo-button" type="button" name="button">GetHubSpotFree</button>
+              <p>Get started FREE tools, and upgrade as you grow.</p>
+            </div>
+
+
           </div>
         </section>
-        <section class="row-due">
+
+        <div class="color-section">
+          <section class="rubik-box">
+          </section>
+          <section class="row-uno">
+            <div class="container">
+              <aside class="leftbox">
+              </aside>
+              <aside class="rightbox">
+              </aside>
+            </div>
+          </section>
+          <section class="row-due">
+            <div class="container">
+              <aside class="leftbox">
+              </aside>
+              <div class="centerbox">
+              </div>
+              <aside class="rightbox">
+              </aside>
+            </div>
+          </section>
+        </div>
+
+        <section class="row-tre">
           <div class="container">
-            <aside class="leftbox">
-            </aside>
-            <div class="centerbox">
+            <div class="text-section">
             </div>
-            <aside class="rightbox">
-            </aside>
+            <div class="table-section">
+              <div class="first">
+              </div>
+              <div class="second">
+              </div>
+              <div class="third">
+              </div>
+              <div class="forth">
+              </div>
+              <div class="fifth">
+              </div>
+              <div class="sixth">
+              </div>
+              <div class="seventh">
+              </div>
+              <div class="eight">
+              </div>
+            </div>
           </div>
         </section>
-      </div>
 
-      <section class="row-tre">
+        <section class="row-quattro">
+          <div class="container">
+            <div class="section-top">
+              <aside class="left">
+              </aside>
+              <aside class="right">
+              </aside>
+            </div>
+            <div class="section-bot">
+              <aside class="left">
+              </aside>
+              <aside class="right">
+              </aside>
+            </div>
+          </div>
+        </section>
+      </main>
+      <!-- FOOTER -->
+      <footer>
         <div class="container">
-          <div class="text-section">
-          </div>
-          <div class="table-section">
-            <div class="first">
+          <section class="row-cinque">
+            <div class="footer-block">
             </div>
-            <div class="second">
+            <div class="footer-block">
             </div>
-            <div class="third">
+            <div class="footer-block">
             </div>
-            <div class="forth">
+            <div class="footer-block">
             </div>
-            <div class="fifth">
-            </div>
-            <div class="sixth">
-            </div>
-            <div class="seventh">
-            </div>
-            <div class="eight">
-            </div>
-          </div>
+          </section>
+          <section class="finale">
+
+          </section>
+
         </div>
-      </section>
-
-      <section class="row-quattro">
-        <div class="container">
-          <div class="section-top">
-            <aside class="left">
-            </aside>
-            <aside class="right">
-            </aside>
-          </div>
-          <div class="section-bot">
-            <aside class="left">
-            </aside>
-            <aside class="right">
-            </aside>
-          </div>
-        </div>
-      </section>
-    </main>
-    <!-- FOOTER -->
-    <footer>
-      <div class="container">
-      <section class="row-cinque">
-          <div class="footer-block">
-          </div>
-          <div class="footer-block">
-          </div>
-          <div class="footer-block">
-          </div>
-          <div class="footer-block">
-          </div>
-        </section>
-        <section class="finale">
-
-        </section>
-
-      </div>
 
 
-    </footer>
-  </body>
-  </html>
+      </footer>
+    </body>
+    </html>
