--- a/index.html
+++ b/index.html
@@ -82,14 +82,17 @@
               <button id="jumbo-button" type="button" name="button">GetHubSpotFree</button>
               <p>Get started FREE tools, and upgrade as you grow.</p>
             </div>
-
-
           </div>
         </section>
 
         <div class="color-section">
-          <section class="rubik-box">
-          </section>
+          <div class="container">
+            <section class="rubik-box">
+              <img src="img/cube.png" alt="">
+              <h2>Powerful Alone. Better Together</h2>
+              <p>Hubspot offers a full stack of software for marketing, safes, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
+            </section>
+          </div>  
           <section class="row-uno">
             <div class="container">
               <aside class="leftbox">
