Row due complete

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
             </div>
             <button id="login" type="button" name="login">Log in</button>
             <button id="gethub" type="button" name="gethubspotfree">GetHubSpotFree</button>
-          </section>
+          </div>
+        </div>
+      </section>
 
       <section class="header-bot row">
         <div class="container">
           <img id="logo" src="img/logo.svg" alt="logo">
           <nav class="main-nav">
-            <ul>
+            <ul class="ul-line">
               <li>
                 <select class="select-nav" name="">
                   <option value="">Software</option>
@@ -64,14 +66,14 @@
                     <option value="">Cavallo</option>
                   </select>
               </li>
-              </ul>
-            </nav>
-          </div>
-        </section>
-      </header>
+            </ul>
+          </nav>
+        </div>
+      </section>
+    </header>
 
       <!-- MAIN -->
-      <main>
+    <main>
         <section class="jumbo">
           <div class="banner-bot">
           </div>
@@ -79,7 +81,7 @@
             <div class="text-jumbo">
               <h1>There's a better way to grow.</h1>
               <p>Marketing, sales, and service software that helps your business grow without compromise. Because &quot;good for the business&quot; should also mean &quot;good for the customer.&quot;</p>
-              <button id="jumbo-button" type="button" name="button">GetHubSpotFree</button>
+              <button div class="orange-button" type="button" name="button">GetHubSpotFree</button>
               <p>Get started FREE tools, and upgrade as you grow.</p>
             </div>
           </div>
@@ -92,27 +94,95 @@
               <h2>Powerful Alone. Better Together</h2>
               <p>Hubspot offers a full stack of software for marketing, safes, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
             </section>
-          </div>  
+          </div>
+          <!-- SEZIONE ROW UNO -->
           <section class="row-uno">
             <div class="container">
-              <aside class="leftbox">
+              <aside class="leftbox-row-uno">
+                <img class="image-inside-box"src="img/book.svg" alt="img-libro">
+                <div class="button-row-uno">
+                  <button class="orange-button" type="button" name="learn-more">Learn More</button>
+                </div>
               </aside>
-              <aside class="rightbox">
+              <aside class="rightbox-row-uno">
+                <h2> Free HubSpot CRM</h2>
+                <p>Everything you need to organize, track, and build better relationship with leads and customers. Yes, it's 100% free. Forever.</p>
+                <h3>POPOLAR FEATURE</h3>
+                <hr>
+                <ul class="ul-line">
+                  <li><i class="fas fa-check-circle"></i>Contact Insight</li>
+                  <li><i class="fas fa-check-circle"></i>Deals</li>
+                  <li><i class="fas fa-check-circle"></i>Tasks</li>
+                </ul>
               </aside>
             </div>
           </section>
+          <!-- SEZIONE ROW 2 -->
           <section class="row-due">
             <div class="container">
-              <aside class="leftbox">
+              <aside class="leftbox-row-due">
+                <div class="centratura">
+                  <img class="images-row-2"src="img/marketing.svg" alt="">
+                  <h2>Marketing Hub</h2>
+                  <p>
+                    Marketing software to help you grow traffic, convert more visitors, and run complete inbound, marketing campagins at scale.
+                  </p>
+                  <hr>
+                  <h3>POPOLAR FEATURE</h3>
+                </div>
+                <ul class="ul-unline">
+                  <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+                  <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+                  <li><i class="fas fa-check-circle"></i>Analytics</li>
+                </ul>
+                <div class="button-row-uno">
+                  <button class="orange-button" type="button" name="learn-more">Learn More</button>
+                </div>
               </aside>
-              <div class="centerbox">
+
+              <div class="centerbox-row-due">
+                <div class="centratura">
+                  <img class="images-row-2"src="img/marketing.svg" alt="">
+                  <h2>Sales Hub</h2>
+                  <p>
+                    Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
+                  </p>
+                  <hr>
+                  <h3>POPOLAR FEATURE</h3>
+                </div>
+
+                <ul class="ul-unline">
+                  <li><i class="fas fa-check-circle"></i>Email Tracking</li>
+                  <li><i class="fas fa-check-circle"></i>Meeting Scheduling</li>
+                  <li><i class="fas fa-check-circle"></i>Email Automation</li>
+                </ul>
+                <div class="button-row-uno">
+                  <button class="orange-button" type="button" name="learn-more">Learn More</button>
+                </div>
               </div>
-              <aside class="rightbox">
+              <aside class="right-row-due">
+                <div class="centratura">
+                  <img class="images-row-2"src="img/marketing.svg" alt="">
+                  <h2>Serevice Hub</h2>
+                  <p>
+                    Customer service sorftware to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.
+                  </p>
+                  <hr>
+                  <h3>POPOLAR FEATURE</h3>
+                </div>
+
+                <ul class="ul-unline">
+                  <li><i class="fas fa-check-circle"></i>Tickets</li>
+                  <li><i class="fas fa-check-circle"></i>Customer Feedback</li>
+                  <li><i class="fas fa-check-circle"></i>Knowledge Base</li>
+                </ul>
+                <div class="button-row-uno">
+                  <button class="orange-button" type="button" name="learn-more">Learn More</button>
+                </div>
               </aside>
-            </div>
           </section>
         </div>
-
+        SEZIONE ROW 3
         <section class="row-tre">
           <div class="container">
             <div class="text-section">
@@ -154,9 +224,9 @@
             </div>
           </div>
         </section>
-      </main>
+    </main>
       <!-- FOOTER -->
-      <footer>
+    <footer>
         <div class="container">
           <section class="row-cinque">
             <div class="footer-block">
@@ -174,7 +244,6 @@
 
         </div>
 
-
       </footer>
-    </body>
-    </html>
+  </body>
+</html>
