--- a/index.html
+++ b/index.html
@@ -182,32 +182,60 @@
               </aside>
           </section>
         </div>
-        SEZIONE ROW 3
+
+        <!-- SEZIONE ROW 3 -->
         <section class="row-tre">
           <div class="container">
-            <div class="text-section">
-            </div>
             <div class="table-section">
-              <div class="first">
+              <h2>Learn and grow with award-winning support and a hriving community behind you.</h2>
+              <p>
+                You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.
+              </p>
+              <div class="border-bot-right">
+                <img class="image-row-tre"src="img/homepage_community_agency.svg" alt="">
+                <h3>150+</h3>
+                <p>Hubspot user groups </p>
               </div>
-              <div class="second">
+              <div class="border-bot-right">
+                <img class="image-row-tre"src="img/homepage_community_blog.svg" alt="">
+                <h3>4.5M+</h3>
+                <p>monthly visits </p>
               </div>
-              <div class="third">
+              <div class="border-bot-right">
+                <img class="image-row-tre"src="img/homepage_community_academy.svg" alt="">
+                <h3>155K+</h3>
+                <p>certified professionals </p>
               </div>
-              <div class="forth">
+              <div class="border-bottom">
+                <img class="image-row-tre"src="img/homepage_community_inbound.svg" alt="">
+                <h3>21K+</h3>
+                <p>registered attendees </p>
               </div>
-              <div class="fifth">
+              <div class="border-right">
+                <img class="image-row-tre"src="img/homepage_community_connect.svg" alt="">
+                <h3>200+</h3>
+                <p>Integrations </p>
               </div>
-              <div class="sixth">
+              <div class="border-right">
+                <img class="image-row-tre"src="img/homepage_community_globe.svg" alt="">
+                <h3>6+</h3>
+                <p>languages </p>
               </div>
-              <div class="seventh">
+              <div class="border-right">
+                <img class="image-row-tre"src="img/homepage_community_followers.svg" alt="">
+                <h3>2.6M+</h3>
+                <p>social followers </p>
               </div>
-              <div class="eight">
+              <div class="no-border">
+                <img class="image-row-tre"src="img/growthhub-white-small-1.svg" alt="">
+                <h3>5k+</h3>
+                <p>profiles and counting </p>
               </div>
             </div>
           </div>
         </section>
-
+        
+        <!-- SEZIONE ROW 4 -->
         <section class="row-quattro">
           <div class="container">
             <div class="section-top">
