--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </section>
           </div>
           <!-- SEZIONE ROW UNO -->
-          <section class="row-uno">
             <div class="container">
+              <section class="row-uno">
               <aside class="leftbox-row-uno">
                 <img class="image-inside-box"src="img/book.svg" alt="img-libro">
                 <div class="button-row-uno">
@@ -115,8 +115,8 @@
                   <li><i class="fas fa-check-circle"></i>Tasks</li>
                 </ul>
               </aside>
-            </div>
-          </section>
+            </section>
+          </div>
           <!-- SEZIONE ROW 2 -->
           <section class="row-due">
             <div class="container">
@@ -180,6 +180,7 @@
                   <button class="orange-button" type="button" name="learn-more">Learn More</button>
                 </div>
               </aside>
+            </div>
           </section>
         </div>
 
@@ -234,25 +235,47 @@
             </div>
           </div>
         </section>
-        
+
         <!-- SEZIONE ROW 4 -->
+        <!--SEZIONE TOP ROW 4 -->
         <section class="row-quattro">
           <div class="container">
             <div class="section-top">
-              <aside class="left">
+              <aside class="left-row-quattro">
+                <h2>64,500</h2>
+                <p>customers in over <span>100</span></p>
+                <p>countries growing their</p>
+                <p>business with HubSpot</p>
               </aside>
-              <aside class="right">
+              <aside class="right-row-quattro">
+                <img class="atlassian-doordash" src="img/atlassian.png" alt="">
+                <img class="atlassian-doordash" src="img/doordash.png" alt="">
+                <img class="g2crowd-purple" src="img/g2crowd-logo@2x.png" alt="">
+                <img class="g2crowd-purple" src="img/purple-logo@2x.png" alt="">
+                <img class="subaru" src="img/subaru.png" alt="">
+                <img class="vmware-wistia" src="img/wistia.png" alt="">
+                <img class="classpass" src="img/classpass.png" alt="">
+                <img class="vmware-wistia" src="img/vmware.png" alt="">
               </aside>
+              <!-- SEZIONE BOTTOM ROW 4 -->
+
+
             </div>
             <div class="section-bot">
               <aside class="left">
+                <h2>Start Growing With HubSpot Today</h2>
+                <p>With tools to make every part of yor process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                <button div class="orange-button" type="button" name="button">GetHubSpotFree</button>
+                <p>Get started with FREE tools, or get more with out premium software.</p>
               </aside>
               <aside class="right">
+                <img id="woman"src="img/woman.webp" alt="">
               </aside>
             </div>
           </div>
         </section>
     </main>
+
       <!-- FOOTER -->
     <footer>
         <div class="container">
@@ -267,10 +290,10 @@
             </div>
           </section>
           <section class="finale">
-
           </section>
-
         </div>
+
+
 
       </footer>
   </body>
