--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <nav class="main-nav">
             <ul class="ul-line">
               <li>
-                <select class="select-nav" name="">
+                <select class="select-nav" name="Software">
                   <option value="">Software</option>
                   <option value="">Pollo</option>
                 </select>
@@ -49,19 +49,19 @@
                 <a id="pricing" href="#">Pricing</a>
               </li>
               <li>
-                <select class="select-nav" name="">
+                <select class="select-nav" name="Resources">
                   <option value="">Resources</option>
                   <option value="">Mucca</option>
                 </select>
               </li>
               <li>
-                <select class="select-nav" name="">
+                <select class="select-nav" name="Partners">
                   <option value="">Partners</option>
                   <option value="">Gallina</option>
                 </select>
               </li>
               <li>
-                  <select class="select-nav" name="">
+                  <select class="select-nav" name="About">
                     <option value="">About</option>
                     <option value="">Cavallo</option>
                   </select>
@@ -281,20 +281,74 @@
         <div class="container">
           <section class="row-cinque">
             <div class="footer-block">
+              <h3>Increase your traffic</h3>
+              <ul class="ul-footer1">
+                <li><a href="#">Ad Software</a></li>
+                <li><a href="#">Blog Software</a></li>
+                <li><a href="#">SEO Software</a></li>
+                <li><a href="#">Social Media Software</a></li>
+                <li><a href="#">Content Management System</a></li>
+              </ul>
             </div>
             <div class="footer-block">
+              <h3>Connect With Leads</h3>
+              <ul class="ul-footer1">
+                <li><a href="#">Find New prospects</a></li>
+                <li><a href="#">Email Tracking</a></li>
+                <li><a href="#">Sales Email Templates</a></li>
+                <li><a href="#">Click to Call Your Leads</a></li>
+                <li><a href="#">Email Marketing</a></li>
+              </ul>
             </div>
             <div class="footer-block">
+              <h3>Close and Manage Leads</h3>
+              <ul class="ul-footer1">
+                <li><a href="#">Document Tracking Tool</a></li>
+                <li><a href="#">Meeting Schedule Tool</a></li>
+                <li><a href="#">Sales Automation Tool</a></li>
+                <li><a href="#">Lead Management Tool</a></li>
+                <li><a href="#">Pipeline Management Tool</a></li>
+              </ul>
             </div>
             <div class="footer-block">
+              <h3>Support and Tools</h3>
+              <ul class="ul-footer1">
+                <li><a href="#">HubSpot Partners</a></li>
+                <li><a href="#">Join a Local User Group</a></li>
+                <li><a href="#">Get a Free Website Report</a></li>
+                <li><a href="#">HubSpot Templates</a></li>
+                <li><a href="#">Free Tools & Generators</a></li>
+                <li><button id="footer-button"type="button" name="ContactButton">Contact HubSpot Support</button> </li>
+                <ul class="ul-footer2">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+              </ul>
             </div>
           </section>
           <section class="finale">
+            <ul class="language-list">
+              <li><a href="#">English</a></li>
+              <li><a href="#">Deutsch</a></li>
+              <li><a href="#">日本語</a></li>
+              <li><a href="#">Espa&ntilde;ol</a></li>
+              <li><a href="#">Portogu&ecirc;s</a></li>
+              <li><a href="#">Fran&ccedil;ais</a></li>
+            </ul>
+            <hr>
+            <div class="footer-float-sx">
+              <a href="#"><img src="img/logo_gray.svg" alt=""></a>
+              <p>Copyright @ 2019 Hubspot, Inc.</p>
+            </div>
+            <div class="footer-float-dx">
+              <a href="#">Legal Stuff</a>
+              <a href="#">Privacy Policy</a>
+            </div>
           </section>
         </div>
-
-
-
       </footer>
-  </body>
-</html>
+    </body>
+    </html>
