--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="text-jumbo">
               <h1>There's a better way to grow.</h1>
               <p>Marketing, sales, and service software that helps your business grow without compromise. Because &quot;good for the business&quot; should also mean &quot;good for the customer.&quot;</p>
-              <button div class="orange-button" type="button" name="button">GetHubSpotFree</button>
+              <button class="orange-button" type="button" name="button">GetHubSpotFree</button>
               <p>Get started FREE tools, and upgrade as you grow.</p>
             </div>
           </div>
@@ -99,7 +99,7 @@
             <div class="container">
               <section class="row-uno">
               <aside class="leftbox-row-uno">
-                <img class="image-inside-box"src="img/book.svg" alt="img-libro">
+                <img class="image-inside-box" src="img/book.svg" alt="img-libro">
                 <div class="button-row-uno">
                   <button class="orange-button" type="button" name="learn-more">Learn More</button>
                 </div>
@@ -122,7 +122,7 @@
             <div class="container">
               <aside class="leftbox-row-due">
                 <div class="centratura">
-                  <img class="images-row-2"src="img/marketing.svg" alt="">
+                  <img class="images-row-2" src="img/marketing.svg" alt="">
                   <h2>Marketing Hub</h2>
                   <p>
                     Marketing software to help you grow traffic, convert more visitors, and run complete inbound, marketing campagins at scale.
@@ -142,7 +142,7 @@
 
               <div class="centerbox-row-due">
                 <div class="centratura">
-                  <img class="images-row-2"src="img/marketing.svg" alt="">
+                  <img class="images-row-2" src="img/marketing.svg" alt="">
                   <h2>Sales Hub</h2>
                   <p>
                     Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
@@ -162,7 +162,7 @@
               </div>
               <aside class="right-row-due">
                 <div class="centratura">
-                  <img class="images-row-2"src="img/marketing.svg" alt="">
+                  <img class="images-row-2" src="img/marketing.svg" alt="">
                   <h2>Serevice Hub</h2>
                   <p>
                     Customer service sorftware to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.
@@ -193,42 +193,42 @@
                 You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.
               </p>
               <div class="border-bot-right">
-                <img class="image-row-tre"src="img/homepage_community_agency.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_agency.svg" alt="">
                 <h3>150+</h3>
                 <p>Hubspot user groups </p>
               </div>
               <div class="border-bot-right">
-                <img class="image-row-tre"src="img/homepage_community_blog.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_blog.svg" alt="">
                 <h3>4.5M+</h3>
                 <p>monthly visits </p>
               </div>
               <div class="border-bot-right">
-                <img class="image-row-tre"src="img/homepage_community_academy.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_academy.svg" alt="">
                 <h3>155K+</h3>
                 <p>certified professionals </p>
               </div>
               <div class="border-bottom">
-                <img class="image-row-tre"src="img/homepage_community_inbound.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_inbound.svg" alt="">
                 <h3>21K+</h3>
                 <p>registered attendees </p>
               </div>
               <div class="border-right">
-                <img class="image-row-tre"src="img/homepage_community_connect.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_connect.svg" alt="">
                 <h3>200+</h3>
                 <p>Integrations </p>
               </div>
               <div class="border-right">
-                <img class="image-row-tre"src="img/homepage_community_globe.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_globe.svg" alt="">
                 <h3>6+</h3>
                 <p>languages </p>
               </div>
               <div class="border-right">
-                <img class="image-row-tre"src="img/homepage_community_followers.svg" alt="">
+                <img class="image-row-tre" src="img/homepage_community_followers.svg" alt="">
                 <h3>2.6M+</h3>
                 <p>social followers </p>
               </div>
               <div class="no-border">
-                <img class="image-row-tre"src="img/growthhub-white-small-1.svg" alt="">
+                <img class="image-row-tre" src="img/growthhub-white-small-1.svg" alt="">
                 <h3>5k+</h3>
                 <p>profiles and counting </p>
               </div>
@@ -265,11 +265,11 @@
               <aside class="left">
                 <h2>Start Growing With HubSpot Today</h2>
                 <p>With tools to make every part of yor process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
-                <button div class="orange-button" type="button" name="button">GetHubSpotFree</button>
+                <button class="orange-button" type="button" name="button">GetHubSpotFree</button>
                 <p>Get started with FREE tools, or get more with out premium software.</p>
               </aside>
               <aside class="right">
-                <img id="woman"src="img/woman.webp" alt="">
+                <img id="woman" src="img/woman.webp" alt="">
               </aside>
             </div>
           </div>
@@ -318,14 +318,16 @@
                 <li><a href="#">Get a Free Website Report</a></li>
                 <li><a href="#">HubSpot Templates</a></li>
                 <li><a href="#">Free Tools & Generators</a></li>
-                <li><button id="footer-button"type="button" name="ContactButton">Contact HubSpot Support</button> </li>
-                <ul class="ul-footer2">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+                <li><button id="footer-button" type="button" name="ContactButton">Contact HubSpot Support</button> </li>
+                <li>
+                  <ul class="ul-footer2">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </section>
