--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         <div class="container">
           <div class="float-left">
             <i class="fas fa-globe-europe"></i>
-            <select class="lingua" name="Lingua">
-              <option value="eng">English</option>
-              <option value="ita">Italiano</option>
-              <option value="ger">Deutsche</option>
-            </select>
+            <a href="#" class="links" name="Lingua">
+              English<i class="fas fa-chevron-down"></i>
+            </a>
             <a id="contact" href="#">Contact Us</a>
           </div>
           <div class="float-right">
@@ -36,35 +34,31 @@
 
       <section class="header-bot row">
         <div class="container">
-          <img id="logo" src="img/logo.svg" alt="logo">
+          <a href="#"><img id="logo" src="img/logo.svg" alt="logo"></a>
           <nav class="main-nav">
             <ul class="ul-line">
               <li>
-                <select class="select-nav" name="Software">
-                  <option value="">Software</option>
-                  <option value="">Pollo</option>
-                </select>
+                <a href="#" class="links" name="links">
+                  Software<i class="fas fa-chevron-down"></i>
+                </a>
               </li>
               <li>
-                <a id="pricing" href="#">Pricing</a>
+                <a class="links" href="#">Pricing</a>
               </li>
               <li>
-                <select class="select-nav" name="Resources">
-                  <option value="">Resources</option>
-                  <option value="">Mucca</option>
-                </select>
+                <a href="#" class="links" name="links">
+                  Resources<i class="fas fa-chevron-down"></i>
+                </a>
               </li>
               <li>
-                <select class="select-nav" name="Partners">
-                  <option value="">Partners</option>
-                  <option value="">Gallina</option>
-                </select>
+                <a href="#" class="links" name="links">
+                  Partners<i class="fas fa-chevron-down"></i>
+                </a>
               </li>
               <li>
-                  <select class="select-nav" name="About">
-                    <option value="">About</option>
-                    <option value="">Cavallo</option>
-                  </select>
+                <a href="#" class="links" name="links">
+                  About<i class="fas fa-chevron-down"></i>
+                </a>
               </li>
             </ul>
           </nav>
@@ -142,7 +136,7 @@
 
               <div class="centerbox-row-due">
                 <div class="centratura">
-                  <img class="images-row-2" src="img/marketing.svg" alt="">
+                  <img class="images-row-2" src="img/sales.svg" alt="">
                   <h2>Sales Hub</h2>
                   <p>
                     Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
@@ -162,8 +156,8 @@
               </div>
               <aside class="right-row-due">
                 <div class="centratura">
-                  <img class="images-row-2" src="img/marketing.svg" alt="">
-                  <h2>Serevice Hub</h2>
+                  <img class="images-row-2" src="img/service.svg" alt="">
+                  <h2>Service Hub</h2>
                   <p>
                     Customer service sorftware to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.
                   </p>
@@ -278,79 +272,90 @@
 
       <!-- FOOTER -->
     <footer>
-        <div class="container">
-          <section class="row-cinque">
-            <div class="footer-block">
-              <h3>Increase your traffic</h3>
-              <ul class="ul-footer1">
-                <li><a href="#">Ad Software</a></li>
-                <li><a href="#">Blog Software</a></li>
-                <li><a href="#">SEO Software</a></li>
-                <li><a href="#">Social Media Software</a></li>
-                <li><a href="#">Content Management System</a></li>
-              </ul>
-            </div>
-            <div class="footer-block">
-              <h3>Connect With Leads</h3>
-              <ul class="ul-footer1">
-                <li><a href="#">Find New prospects</a></li>
-                <li><a href="#">Email Tracking</a></li>
-                <li><a href="#">Sales Email Templates</a></li>
-                <li><a href="#">Click to Call Your Leads</a></li>
-                <li><a href="#">Email Marketing</a></li>
-              </ul>
-            </div>
-            <div class="footer-block">
-              <h3>Close and Manage Leads</h3>
-              <ul class="ul-footer1">
-                <li><a href="#">Document Tracking Tool</a></li>
-                <li><a href="#">Meeting Schedule Tool</a></li>
-                <li><a href="#">Sales Automation Tool</a></li>
-                <li><a href="#">Lead Management Tool</a></li>
-                <li><a href="#">Pipeline Management Tool</a></li>
-              </ul>
-            </div>
-            <div class="footer-block">
-              <h3>Support and Tools</h3>
-              <ul class="ul-footer1">
-                <li><a href="#">HubSpot Partners</a></li>
-                <li><a href="#">Join a Local User Group</a></li>
-                <li><a href="#">Get a Free Website Report</a></li>
-                <li><a href="#">HubSpot Templates</a></li>
-                <li><a href="#">Free Tools & Generators</a></li>
-                <li><button id="footer-button" type="button" name="ContactButton">Contact HubSpot Support</button> </li>
-                <li>
-                  <ul class="ul-footer2">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </section>
-          <section class="finale">
-            <ul class="language-list">
-              <li><a href="#">English</a></li>
-              <li><a href="#">Deutsch</a></li>
-              <li><a href="#">日本語</a></li>
-              <li><a href="#">Espa&ntilde;ol</a></li>
-              <li><a href="#">Portogu&ecirc;s</a></li>
-              <li><a href="#">Fran&ccedil;ais</a></li>
+      <div class="container">
+        <section class="row-cinque">
+          <div class="footer-block">
+            <h3>Increase your traffic</h3>
+            <ul class="ul-footer1">
+              <li><a href="#">Ad Software</a></li>
+              <li><a href="#">Blog Software</a></li>
+              <li><a href="#">SEO Software</a></li>
+              <li><a href="#">Social Media Software</a></li>
+              <li><a href="#">Content Management System</a></li>
             </ul>
-            <hr>
-            <div class="footer-float-sx">
-              <a href="#"><img src="img/logo_gray.svg" alt=""></a>
-              <p>Copyright @ 2019 Hubspot, Inc.</p>
-            </div>
-            <div class="footer-float-dx">
-              <a href="#">Legal Stuff</a>
-              <a href="#">Privacy Policy</a>
-            </div>
-          </section>
-        </div>
-      </footer>
-    </body>
-    </html>
+          </div>
+          <div class="footer-block">
+            <h3>Connect With Leads</h3>
+            <ul class="ul-footer1">
+              <li><a href="#">Find New prospects</a></li>
+              <li><a href="#">Email Tracking</a></li>
+              <li><a href="#">Sales Email Templates</a></li>
+              <li><a href="#">Click to Call Your Leads</a></li>
+              <li><a href="#">Email Marketing</a></li>
+            </ul>
+          </div>
+          <div class="footer-block">
+           <h3>Close and Manage Leads</h3>
+           <ul class="ul-footer1">
+            <li><a href="#">Document Tracking Tool</a></li>
+            <li><a href="#">Meeting Schedule Tool</a></li>
+            <li><a href="#">Sales Automation Tool</a></li>
+            <li><a href="#">Lead Management Tool</a></li>
+            <li><a href="#">Pipeline Management Tool</a></li>
+           </ul>
+          </div>
+          <div class="footer-block">
+            <h3>Support and Tools</h3>
+            <ul class="ul-footer1">
+              <li><a href="#">HubSpot Partners</a></li>
+              <li><a href="#">Join a Local User Group</a></li>
+              <li><a href="#">Get a Free Website Report</a></li>
+              <li><a href="#">HubSpot Templates</a></li>
+              <li><a href="#">Free Tools & Generators</a></li>
+              <li><button id="footer-button" type="button" name="ContactButton">Contact HubSpot Support</button> </li>
+              <li>
+                <ul class="ul-footer2">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="finale">
+          <ul class="language-list">
+            <li><a href="#">English</a></li>
+            <li><a href="#">Deutsch</a></li>
+            <li><a href="#">日本語</a></li>
+            <li><a href="#">Espa&ntilde;ol</a></li>
+            <li><a href="#">Portogu&ecirc;s</a></li>
+            <li><a href="#">Fran&ccedil;ais</a></li>
+          </ul>
+          <hr>
+          <div class="footer-float-sx">
+            <a href="#"><img src="img/logo_gray.svg" alt=""></a>
+            <p>Copyright @ 2019 Hubspot, Inc.</p>
+          </div>
+          <div class="footer-float-dx">
+            <a href="#">Legal Stuff</a>
+            <a href="#">Privacy Policy</a>
+          </div>
+        </section>
+      </div>
+    </footer>
+    <!-- CHAT BOT -->
+    <div class="chat-fixed">
+      <i class="fas fa-comments"></i>
+      <div class="chat-text">
+        <img id="logo-bot" src="https://static.hsappstatic.net/bots-ui-app/ex/bot-avatar.jpg" alt="">
+        <h3>HubBot</h3>
+        <p>Ciao! Chiedimi qualcosa!</p>
+        <p id="risposta-utente">Non ho nulla da chiedere.</p>
+        <p>Allora lasciami in pace che sono stanco!!!</p>
+      </div>
+    </div>
+  </body>
+  </html>
